--- a/links/index.html
+++ b/links/index.html
@@ -1,50 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 
-  <!--
-
-  ##TAG INDEX FOR ROGER##
-
-  - #cofe - CofE news box JavaScript insert
-  - #content - content! Text etc on pages.
-  - #footer - info at foot of website, includes current year etc.
-  - #nav - links at top to pages
-  - #side - sidebar for info on home page, extra links on other pages etc
-
-  -->
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring - Links</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Links &mdash; St. Andrew's Church, Ferring</title>
+  <meta name="description" content="Links to various groups and organisations that St. Andrew's Church wishes to highlight!">
+  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, saint, south, st, sussex, west, worthing, village, diocese, links">
+  <meta name="author" content="St. Andrew's Church, Ferring">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
+  <!-- CSS & JavaScript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
   <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
   <link rel="stylesheet" href="../css/style.css"><!--my additions-->
 
-  <!-- JavaScript
-  __________________________________________________ -->
-
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
 <body>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -67,17 +52,11 @@
     <!--Row begins--><div class="row">
 
       <!--Header begin--><div class="twelve columns" id="header">
-        <div class="two columns" id="top-shield">
-          <img src="../images/shield.png" />
-        </div>
 
-        <div class="eight columns">
+        <div class="twelve columns">
           <h1 id="header-title">St. Andrew's Church</h1>
         </div>
 
-        <div class="two columns" id="top-cofe">
-          <img src="../images/cofe.png" />
-        </div>
       </div><!--Header ends-->
 
     </div><!--Row ends-->
@@ -100,7 +79,6 @@
       </div><!--Navigation area ends-->
 
     </div><!--Row ends-->
-
 
     <!--Row begins--><div class="row">
 
@@ -175,225 +153,48 @@
           </tbody>
         </table>
 
-        <!--
-
-           <tr>
-
-             <td height="46" width="20%" valign="middle">
-                 <a target="_blank" href="http://www.facebook.com/standrewsferring">
-                 <font size="2">St Andrew&#39;s Facebook page</font></a></td>
-           <td align="right" height="46" width="10%">&nbsp;</td>
-
-             <td align="center" height="46" width="15%"><br>
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-               <a target="_blank" title="Ferring Parish Council Website" href="http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=1235">
-             <img border="0" src="Images/parish.jpg" width="61" height="60"></a>&nbsp;&nbsp;&nbsp; </td>
-
-             <td align="left" height="46" width="15%"><a target="_blank" title="Ferring Parish Council Website" href="http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=1235">Ferring
-             Parish Council</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
-
-                 <a target="_blank" title="Church of England Website" href="http://www.churchofengland.org">
-                 <img border="0" src="Images/coebelowright.jpg" width="86" height="67"></a><br>&nbsp;</td>
-             <td height="46" width="20%" valign="middle">
-                 <a target="_blank"  href="http://www.churchofengland.org">Church Of England's New
-                 Website</a></td>
-           <td align="right" height="46" width="10%">&nbsp;</td>
-
-             <td align="center" height="46" width="15%"><br>
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-               <a target="_blank" title="Ferring Village Website" href="http://www.ferringvillage.co.uk/">
-             <img border="0" src="Images/village.jpg" width="70" height="60"></a>&nbsp;&nbsp;&nbsp;&nbsp; </td>
-
-             <td align="left" height="46" width="15%"><a target="_blank" title="Ferring Village Website" href="http://www.ferringvillage.co.uk/">Ferring
-             Village Website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
-           <td align="right" height="46" width="15%"></td>
-           </tr>
-           <tr>
-             <td align="center" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="10%" valign="middle">
-                <a target="_blank" title="Chichester Diocese Website" href="http://www.chichester.anglican.org">
-                <img border="0" src="Images/arms.jpg" width="51" height="63"></a><br>
-&nbsp;</td>
-             <td height="46" width="20%" valign="middle">
-                <a target="_blank" title="Chichester Diocese Website" href="http://www.chichester.anglican.org">Chichester Diocese</a></td>
-            <td align="right" height="46" width="10%">&nbsp;</td>
-
-            <td align="center" height="46" width="15%">
-            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.new-wine.org/home">
-            <img border="0" src="Images/newwine.jpg" width="153" height="66"></a></td>
-
-            <td align="left" height="46" width="15%">
-            <a href="https://www.new-wine.org/" target="_blank">New
-            Wine</a></td>
-            <td align="right" height="46" width="15%"></td>
-
-           </tr>
-           <tr>
-             <td align="center" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="10%" valign="middle">
-                   <a target="_blank" title="Chichester Cathedral Website" href="http://www.chichestercathedral.org.uk">
-                   <img border="0" src="Images/Cathedral.jpg" width="50" height="58"></a><br>&nbsp;</td>
-             <td height="46" width="20%" valign="middle">
-                   <a target="_blank" title="Chichester Cathedral Website" href="http://www.chichestercathedral.org.uk">Chichester Cathedral</a></td>
-            <td align="right" height="46" width="10%">&nbsp;</td>
-            <td align="center" height="46" width="15%">
-            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.bigchurchdayout.com">
-            <img border="0" src="Images/bcdo.jpg" width="82" height="94"></a></td>
-            <td align="left" height="46" width="15%">
-            <a target="_blank" title="Sussex Historic Churches Trust" href="http://www.bigchurchdayout.com">Big Church Day Out</a></td>
-            <td align="right" height="46" width="15%"></td>
-           </tr>
-           <tr>
-             <td align="center" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="10%" valign="middle">
-             &nbsp;<a target="_blank" title="Chichester Cursillo"  href="http://www.chichestercursillo.co.uk"><img border="0" src="Images/new_logo_small.jpg" width="41" height="69"></a><p>&nbsp;</td>
-             <td height="46" width="20%" valign="middle">
-             <a target="_blank" title="Chichester Cursillo"  href="http://www.chichestercursillo.co.uk">Chichester Cursillo</a></td>
-            <td align="right" height="46" width="10%">&nbsp;</td>
-            <td align="center" height="46" width="15%"><br>
-             <a target="_blank" title="Worthing Churches Website"  href="http://www.worthingchurches.org.uk">
-            <img border="0" src="Images/wortingchurches.jpg" width="130" height="38"></a></td>
-            <td align="left" height="46" width="15%"><a target="_blank" title="Worthing Churches Website"  href="http://www.worthingchurches.org.uk">Worthing Churches</a></td>
-            <td align="right" height="46" width="15%">&nbsp;</td>
-            </tr>
-           <tr>
-             <td align="center" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="10%" valign="middle">
-             <a target="_blank" title="Find A Church Near You"  href="http://www.achurchnearyou.com">
-             <img border="0" src="Images/coebelowright.jpg" width="77" height="60">
-             &nbsp;</a></td>
-             <td height="46" width="20%" valign="middle">
-             <a target="_blank" title="Find A Church Near You"  href="http://www.achurchnearyou.com">
-             A Church Near You</a></td>
-            <td align="right" height="46" width="10%">&nbsp;</td>
-            <td align="center" height="46" width="15%">
-            <br>
-            <a target="_blank" title="Sussex Historic Churches Trust"  href="http://www.sussexhistoricchurches.org.uk">
-            <img border="0" src="Images/shct.jpg" width="77" height="64"></a></td>
-            <td align="left" height="46" width="15%">
-            <a target="_blank" title="Sussex Historic Churches Trust"  href="http://www.sussexhistoricchurches.org.uk">Sussex Historic Churches Trust</a></td>
-            <td align="right" height="46" width="15%"></td>
-            </tr>
-           <tr>
-             <td align="center" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="7%" valign="top"><p>
-
-             <a target="_blank" title="Mystery Shopper Entry" href="http://www.ship-of-fools.com/mystery/2011/2076.html">
-             <img border="0" src="Images/mystery.jpg" width="127" height="74"></a></td>
-             <td height="46" width="23%" valign="middle">
-
-             <a target="_blank" title="Mystery Shopper Entry" href="http://www.ship-of-fools.com/mystery/2011/2076.html">
-             Our Mystery
-             Worshipper Entry</a></td>
-            <td align="right" height="46" width="10%">&nbsp;</td>
-            <td align="center" height="46" width="15%">
-             <br>
-             <a target="_blank" title="Church Care Website" href="http://www.churchcare.co.uk">
-             <img border="0" src="Images/ChurchCare.jpg" width="152" height="41"></a></td>
-            <td align="left" height="46" width="15%">
-             <a target="_blank" title="Church Care Website" href="http://www.churchcare.co.uk">Church Care</a></td>
-            <td align="right" height="46" width="15%"></td>
-            </tr>
-           <tr>
-             <td align="center" height="25" width="15%">&nbsp;</td>
-             <td align="center" height="25" width="4%" valign="middle"><img border="0" src="Images/sitelogo.png" width="118" height="71"></td>
-             <td height="25" width="26%" valign="middle">
-               <p align="left"><font size="2"><a href="http://rehab-recovery.co.uk">Rehab Recovery</a> is a free and national helpline assisting people suffering from addiction and mental health problems. You can contact
-               <a href="http://rehab-recovery.co.uk"> Rehab Recovery</a> on 0800 088 66 86</font></td>
-            <td align="right" height="25" width="10%">&nbsp;</td>
-            <td align="center" height="45" width="30%" colspan="2">
-            &nbsp;</td>
-            <td align="right" height="25" width="15%">&nbsp;</td>
-            </tr>
-          </table>-->
-
         </div><!--Content ends-->
 
     </div><!--Row ends-->
 
-
     <!--Row begins--><div class="row">
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
-        <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
-        <img src="images/facebook.jpg" />
+        <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
+        <a href="http://www.facebook.com/standrewsferring"><img src="../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
       </div><!--Footer ends-->
 
     </div><!--Row ends-->
 
-
   </div><!--Container ends-->
 
-  <!--fix for mobile table layout--><script>
+  
+  <script>
+    // fix for mobile table layout
+
     var headertext = [];
     var headers = document.querySelectorAll("thead");
     var tablebody = document.querySelectorAll("tbody");
 
     for (var i = 0; i < headers.length; i++) {
-    	headertext[i]=[];
-    	for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
-    	  var current = headrow;
-    	  headertext[i].push(current.textContent);
-    	  }
+      headertext[i]=[];
+      for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
+        var current = headrow;
+        headertext[i].push(current.textContent);
+        }
     }
 
     for (var h = 0, tbody; tbody = tablebody[h]; h++) {
-    	for (var i = 0, row; row = tbody.rows[i]; i++) {
-    	  for (var j = 0, col; col = row.cells[j]; j++) {
-    	    col.setAttribute("data-th", headertext[h][j]);
-    	  }
-    	}
-    }
-  </script><!--end of fix script-->
-
-  <!--Script to make content and sidebar same height no matter what!--><script>
-    // placing objects inside variables
-
-    //#added the below if statement to make sure this doesn't run on mobile
-
-    if ($(window).width() > 550){
-      var content = $('#contentBox');
-      var sidebar = $('#sidebarBox');
-      var count = 0;
-      var myTimer;
-
-      function setEqualContainer() {
-      	// get content and sidebar height in variables
-      	var getContentHeight = content.outerHeight();
-      	var getSidebarHeight = sidebar.outerHeight();
-
-      	// check if content height is bigger than sidebar
-      	if ( getContentHeight > getSidebarHeight ) {
-      		sidebar.css('min-height', getContentHeight);
-      	}
-
-      	// check if sidebar height is bigger than content
-      	if ( getSidebarHeight > getContentHeight ) {
-      		content.css('min-height', getSidebarHeight);
-      	}
+      for (var i = 0, row; row = tbody.rows[i]; i++) {
+        for (var j = 0, col; col = row.cells[j]; j++) {
+          col.setAttribute("data-th", headertext[h][j]);
+        }
       }
-
-      // creating the timer which will run every 500 milliseconds
-      // and will stop after the container will be loaded
-      // ...or after 15 seconds to not eat a lot of memory
-      myTimer = setInterval( function() {
-      	count++;
-
-      	if ( $('.testContainer').length == 0 ) {
-      		setEqualContainer();
-      	} else {
-      		setEqualContainer();
-      		clearInterval(myTimer);
-      	}
-
-      	if ( count == 15) {
-      		clearInterval(myTimer);
-      	}
-      }, 500);
     }
   </script>
 
 <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
