--- a/photos/index.html
+++ b/photos/index.html
@@ -1,68 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 
-  <!--
-
-  ##TAG INDEX FOR ROGER##
-
-  - #cofe - CofE news box JavaScript insert
-  - #content - content! Text etc on pages.
-  - #footer - info at foot of website, includes current year etc.
-  - #nav - links at top to pages
-  - #side - sidebar for info on home page, extra links on other pages etc
-
-  -->
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Photos Home &mdash; St. Andrew's Photo Gallery &mdash; St. Andrew's Church, Ferring</title>
+  <meta name="description" content="Photos from over the years at St. Andrew's Church, Ferring!">
+  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, saint, south, st, sussex, west, worthing, village, 1250, advent, christmas, event, harvest, photos, picnic, sunday">
+  <meta name="author" content="St. Andrew's Church, Ferring">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
+  <!-- CSS & JavaScript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
   <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
   <link rel="stylesheet" href="../css/style.css"><!--my additions-->
-  <link rel='stylesheet' href='unitegallery/css/unite-gallery.css' type='text/css' /><!--Unite Gallery CSS for image gallery-->
-
-  <!-- JavaScript
-  __________________________________________________ -->
 
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <!--Unite Gallery scripts-->
-    <script type='text/javascript' src='unitegallery/js/unitegallery.min.js'></script>
-    <script type='text/javascript' src='unitegallery/themes/tilesgrid/ug-theme-tilesgrid.js'></script>
 
-    <script type="text/javascript">
-  			jQuery(document).ready(function(){
-  				jQuery("#gallery").unitegallery({
-            theme_navigation_type: "arrows",
-          });
-  			});
-  	</script>
+  <link rel='stylesheet' href='unitegallery/css/unite-gallery.css' type='text/css' />
+
+  <script type='text/javascript' src='unitegallery/js/unitegallery.min.js'></script>
+  <script type='text/javascript' src='unitegallery/themes/tilesgrid/ug-theme-tilesgrid.js'></script>
+
+  <script type="text/javascript">
+      jQuery(document).ready(function(){
+        jQuery("#gallery").unitegallery({
+          theme_navigation_type: "arrows",
+        });
+      });
+  </script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
 <body>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <a name="top"></a>
-
   <!--Container for ALL content, everything inside this--><div class="container">
 
     <!--Row begins--><div class="row">
@@ -82,17 +64,11 @@
     <!--Row begins--><div class="row">
 
       <!--Header begin--><div class="twelve columns" id="header">
-        <div class="two columns" id="top-shield">
-          <img src="../images/shield.png" />
-        </div>
 
-        <div class="eight columns">
+        <div class="twelve columns">
           <h1 id="header-title">St. Andrew's Church</h1>
         </div>
 
-        <div class="two columns" id="top-cofe">
-          <img src="../images/cofe.png" />
-        </div>
       </div><!--Header ends-->
 
     </div><!--Row ends-->
@@ -116,16 +92,16 @@
 
     </div><!--Row ends-->
 
-
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul id="sidebarLinks">
-          <h3 class="title">Albums</h3>
 
-          <li><a href="#">General</a></li>
-          <li><a href="#">Salisbury 2016</a></li>
-          <li><a href="#">Christmas 2015</a></li>
+        <h3 class="list-title">Albums</h3>
+
+        <ul id="sidebarLinks">
+          <li><a href="general">General</a></li>
+          <li><a href="2016salisbury">Salisbury 2016</a></li>
+          <li><a href="2015christmas">Christmas 2015</a></li>
           <li><a href="#">Picnic 2015</a></li>
           <li><a href="#">Ferring 1250</a></li>
           <li><a href="#">WW1 Service 2014</a></li>
@@ -231,20 +207,20 @@
 
     </div><!--Row ends-->
 
-
     <!--Row begins--><div class="row">
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
-        <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
-        <img src="images/facebook.jpg" />
+        <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
+        <a href="http://www.facebook.com/standrewsferring"><img src="../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
       </div><!--Footer ends-->
 
     </div><!--Row ends-->
 
-
   </div><!--Container ends-->
 
-  <!--Script to make content and sidebar same height no matter what!--><script>
+  <script>
+    // Script to make content and sidebar same height no matter what!
     // placing objects inside variables
 
     //#added the below if statement to make sure this doesn't run on mobile
@@ -256,42 +232,43 @@
       var myTimer;
 
       function setEqualContainer() {
-      	// get content and sidebar height in variables
-      	var getContentHeight = content.outerHeight();
-      	var getSidebarHeight = sidebar.outerHeight();
+        // get content and sidebar height in variables
+        var getContentHeight = content.outerHeight();
+        var getSidebarHeight = sidebar.outerHeight();
 
-      	// check if content height is bigger than sidebar
-      	if ( getContentHeight > getSidebarHeight ) {
-      		sidebar.css('min-height', getContentHeight);
-      	}
+        // check if content height is bigger than sidebar
+        if ( getContentHeight > getSidebarHeight ) {
+          sidebar.css('min-height', getContentHeight);
+        }
 
-      	// check if sidebar height is bigger than content
-      	if ( getSidebarHeight > getContentHeight ) {
-      		content.css('min-height', getSidebarHeight);
-      	}
+        // check if sidebar height is bigger than content
+        if ( getSidebarHeight > getContentHeight ) {
+          content.css('min-height', getSidebarHeight);
+        }
       }
 
       // creating the timer which will run every 500 milliseconds
       // and will stop after the container will be loaded
       // ...or after 15 seconds to not eat a lot of memory
       myTimer = setInterval( function() {
-      	count++;
+        count++;
 
-      	if ( $('.testContainer').length == 0 ) {
-      		setEqualContainer();
-      	} else {
-      		setEqualContainer();
-      		clearInterval(myTimer);
-      	}
+        if ( $('.testContainer').length == 0 ) {
+          setEqualContainer();
+        } else {
+          setEqualContainer();
+          clearInterval(myTimer);
+        }
 
-      	if ( count == 15) {
-      		clearInterval(myTimer);
-      	}
+        if ( count == 15) {
+          clearInterval(myTimer);
+        }
       }, 500);
     }
   </script>
 
+  
 <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
