--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Who's Who &mdash; About Us &mdash; St. Andrew's Church, Ferring</title>
-  <meta name="description" content="Phone numbers and addresses for staff at St. Andrew's Church, Ferring.">
-  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, south, sussex, west, worthing, village, address, advertise, contact, clergy, curate, email, phone, telephone, treasurer, warden, webmaster, vicar">
+  <meta name="description" content="Photos of our leading staff members at St. Andrew's Church, Ferring!">
+  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, saint, south, st, sussex, west, worthing, village, churchwarden, clergy, curate, reverend, PCC, photos, treasurer, vicar, warden">
   <meta name="author" content="St. Andrew's Church, Ferring">
 
   <!-- Mobile Specific Metas
@@ -23,6 +23,7 @@
 
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -51,17 +52,11 @@
     <!--Row begins--><div class="row">
 
       <!--Header begin--><div class="twelve columns" id="header">
-        <div class="two columns" id="top-shield">
-          <img src="../images/shield.png" />
-        </div>
 
-        <div class="eight columns">
+        <div class="twelve columns">
           <h1 id="header-title">St. Andrew's Church</h1>
         </div>
 
-        <div class="two columns" id="top-cofe">
-          <img src="../images/cofe.png" />
-        </div>
       </div><!--Header ends-->
 
     </div><!--Row ends-->
@@ -88,8 +83,10 @@
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
+
+        <h3 class="list-title">About Us</h3>
+
         <ul id="sidebarLinks">
-          <h3 class="title">About Us</h3>
           <li><a href="">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
           <li><a href="history">History</a></li>
@@ -142,8 +139,9 @@
     <!--Row begins--><div class="row">
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
-        <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
-        <img src="images/facebook.jpg" />
+        <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
+        <a href="http://www.facebook.com/standrewsferring"><img src="../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
       </div><!--Footer ends-->
 
     </div><!--Row ends-->
