--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <title>Home &mdash; St. Andrew's Church, Ferring</title>
   <meta name="description" content="Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you. If you live or are visiting the area of Ferring, you will find a very warm welcome at our church.">
-  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, south, sussex, west, worthing, village, communion, family, pets, services, sunday">
+  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, saint, south, st, sussex, west, worthing, village, communion, family, pets, services, sunday">
   <meta name="author" content="St. Andrew's Church, Ferring">
 
   <!-- Mobile Specific Metas
@@ -23,6 +23,7 @@
 
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -51,17 +52,11 @@
     <!--Row begins--><div class="row">
 
       <!--Header begin--><div class="twelve columns" id="header">
-        <div class="two columns" id="top-shield">
-          <img src="images/shield.png" />
-        </div>
 
-        <div class="eight columns">
+        <div class="twelve columns">
           <h1 id="header-title">St. Andrew's Church</h1>
         </div>
 
-        <div class="two columns" id="top-cofe">
-          <img src="images/cofe.png" />
-        </div>
       </div><!--Header ends-->
 
     </div><!--Row ends-->
@@ -88,19 +83,25 @@
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
+        <h3 class="list-title">Services Update</h3>
+
         <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
+          <li><strong>Next Family Service</strong><br />
               Sunday 4th September 2016 at 9.30 am<br />
               (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
+        </ul>
+
+        <h3 class="list-title">Other Dates</h3>
+
+        <ul>
           <li>Julian Meetings in Church,<br />
           first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
         </ul>
+
+        <ul>
+          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
+        </ul>
+
       </div><!--Side navigation/info ends-->
 
       <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
@@ -128,8 +129,9 @@
     <!--Row begins--><div class="row">
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
-        <p>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</p>
-        <img src="images/facebook.jpg" />
+        <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
+        <a href="http://www.facebook.com/standrewsferring"><img src="images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
       </div><!--Footer ends-->
 
     </div><!--Row ends-->
